Fix hooking task handler [WIP]
