# agent/python/agent_protocol/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  ../openapi.yml
-#   timestamp: 2023-07-16T03:30:55+00:00
+#   timestamp: 2023-07-19T00:16:44+00:00
 
 from __future__ import annotations
 
@@ -11,29 +11,25 @@ from pydantic import BaseModel, Field
 
 class AgentTaskInput(BaseModel):
     __root__: Any = Field(
-        ...,
-        description='Input parameters for the task. This can be any JSON serializable object.',
+        ..., description='Input parameters for the task. Any value is allowed.'
     )
 
 
-class AgentTaskArtifact(BaseModel):
+class AgentArtifact(BaseModel):
     __root__: Any = Field(
-        ...,
-        description='Artifact that the task has produced. This can be any JSON serializable object describing the artifact.',
+        ..., description='Artifact that the task has produced. Any value is allowed.'
     )
 
 
 class AgentStepInput(BaseModel):
     __root__: Any = Field(
-        ...,
-        description='Input parameters for the task step. This can be any JSON serializable object.',
+        ..., description='Input parameters for the task step. Any value is allowed.'
     )
 
 
 class AgentStepOutput(BaseModel):
     __root__: Any = Field(
-        ...,
-        description='Output that the task step has produced. This can be any JSON serializable object.',
+        ..., description='Output that the task step has produced. Any value is allowed.'
     )
 
 
@@ -43,7 +39,7 @@ class AgentTaskRequestBody(BaseModel):
 
 class AgentTask(AgentTaskRequestBody):
     task_id: str = Field(..., description='The ID of the task.')
-    artifacts: List[AgentTaskArtifact] = Field(
+    artifacts: List[AgentArtifact] = Field(
         ..., description='A list of artifacts that the task has produced.'
     )
 
@@ -52,7 +48,16 @@ class AgentStepRequestBody(BaseModel):
     input: Optional[AgentStepInput] = None
 
 
-class AgentStep(AgentStepRequestBody):
+class AgentStepResult(BaseModel):
+    output: Optional[AgentStepOutput] = None
+    artifacts: List[AgentArtifact] = Field(
+        ..., description='A list of artifacts that the step has produced.'
+    )
+    is_last: Optional[bool] = Field(
+        False, description='Whether this is the last step in the task.'
+    )
+
+
+class AgentStep(AgentStepRequestBody, AgentStepResult):
     task_id: str = Field(..., description='The ID of the task this step belongs to.')
     step_id: str = Field(..., description='The ID of the task step.')
-    output: Optional[AgentStepOutput] = None
